--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "timezone": "Europe/Stockholm",
+  "schedule": [
+    "after 8am and before 5pm every weekday"
+  ],
   "extends": [
-    "config:base"
+    "config:js-app",
+    ":disableRateLimiting",
+    ":rebaseStalePrs",
+    "npm:unpublishSafe",
+    ":automergeRequireAllStatusChecks",
+    ":automergeBranch",
+    ":automergeMinor",
+    ":automergePatch",
+    ":maintainLockFilesWeekly"
   ]
 }
