Add package rule to replace Terraform dependencies with updated versions

--- a/renovate.json
+++ b/renovate.json
@@ -14,5 +14,11 @@
     ":automergeMinor",
     ":automergePatch",
     ":maintainLockFilesWeekly"
+  ],
+  "packageRules": [
+    {
+      "matchManagers": ["terraform"],
+      "rangeStrategy": "replace"
+    }
   ]
 }
